Reconfigured global environment

--- a/04_Expression/scripts/ddrtree.ipynb
+++ b/04_Expression/scripts/ddrtree.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "d5b5104b-f468-4f8f-8bdf-c91fdb95bcf9",
    "metadata": {},
    "outputs": [
@@ -31,43 +31,43 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Loading required package: viridis\n",
+      "Loading required namespace: DDRTree\n",
       "\n",
-      "Loading required package: viridisLite\n",
+      "Loading required namespace: dequer\n",
       "\n",
-      "Loading required package: DDRTree\n",
+      "Loading required namespace: patchwork\n",
       "\n",
-      "Warning message in library(package, lib.loc = lib.loc, character.only = TRUE, logical.return = TRUE, :\n",
-      "“there is no package called ‘DDRTree’”\n",
-      "also installing the dependencies ‘irlba’, ‘BH’\n",
-      "\n",
-      "\n",
-      "Loading required package: dequer\n",
-      "\n",
-      "Warning message in library(package, lib.loc = lib.loc, character.only = TRUE, logical.return = TRUE, :\n",
-      "“there is no package called ‘dequer’”\n"
+      "Loading required namespace: Rcpp\n",
+      "\n"
      ]
     }
    ],
    "source": [
-    "rm(list=ls())\n",
-    "\n",
-    "if (!require(\"viridis\")) {\n",
+    "if (!requireNamespace(\"viridis\")) {\n",
     "    install.packages(\"viridis\")\n",
     "}\n",
     "\n",
-    "if (!require(\"DDRTree\")) {\n",
+    "if (!requireNamespace(\"DDRTree\")) {\n",
     "    install.packages(\"DDRTree\")\n",
     "}\n",
     "\n",
-    "if (!require(\"dequer\")) {\n",
+    "if (!requireNamespace(\"dequer\")) {\n",
     "    install.packages(\"dequer\")\n",
+    "}\n",
+    "\n",
+    "if (!requireNamespace(\"patchwork\")) {\n",
+    "    install.packages(\"devtools\")\n",
+    "    devtools::install_github(\"thomasp85/patchwork\")\n",
+    "}\n",
+    "\n",
+    "if (!requireNamespace(\"Rcpp\")) {\n",
+    "    install.packages(\"Rcpp\")\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "50ff25d9-467d-4e1d-94c2-d47f3205dc9a",
    "metadata": {},
    "outputs": [
@@ -75,16 +75,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Warning message in system(\"timedatectl\", intern = TRUE):\n",
-      "“running command 'timedatectl' had status 1”\n",
-      "── \u001b[1mAttaching packages\u001b[22m ─────────────────────────────────────────────────────────────────────────────────────── tidyverse 1.3.1 ──\n",
+      "── \u001b[1mAttaching packages\u001b[22m ──────────────────────────────────────────────────────────────────────────────────────────────────────────── tidyverse 1.3.1 ──\n",
       "\n",
       "\u001b[32m✔\u001b[39m \u001b[34mggplot2\u001b[39m 3.3.5     \u001b[32m✔\u001b[39m \u001b[34mpurrr  \u001b[39m 0.3.4\n",
       "\u001b[32m✔\u001b[39m \u001b[34mtibble \u001b[39m 3.1.6     \u001b[32m✔\u001b[39m \u001b[34mdplyr  \u001b[39m 1.0.7\n",
       "\u001b[32m✔\u001b[39m \u001b[34mtidyr  \u001b[39m 1.1.4     \u001b[32m✔\u001b[39m \u001b[34mstringr\u001b[39m 1.4.0\n",
-      "\u001b[32m✔\u001b[39m \u001b[34mreadr  \u001b[39m 2.1.0     \u001b[32m✔\u001b[39m \u001b[34mforcats\u001b[39m 0.5.1\n",
+      "\u001b[32m✔\u001b[39m \u001b[34mreadr  \u001b[39m 2.1.1     \u001b[32m✔\u001b[39m \u001b[34mforcats\u001b[39m 0.5.1\n",
       "\n",
-      "── \u001b[1mConflicts\u001b[22m ────────────────────────────────────────────────────────────────────────────────────────── tidyverse_conflicts() ──\n",
+      "── \u001b[1mConflicts\u001b[22m ─────────────────────────────────────────────────────────────────────────────────────────────────────────────── tidyverse_conflicts() ──\n",
       "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mfilter()\u001b[39m masks \u001b[34mstats\u001b[39m::filter()\n",
       "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mlag()\u001b[39m    masks \u001b[34mstats\u001b[39m::lag()\n",
       "\n",
@@ -124,7 +122,7 @@
     "library(RColorBrewer)\n",
     "library(DDRTree)\n",
     "library(dequer)\n",
-    "library(cowplot)\n",
+    "library(patchwork)\n",
     "library(Rcpp)\n",
     "\n",
     "setwd(\"~/eQTL_pQTL_Characterization/\")\n",
@@ -145,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "b273a334-c284-4d09-8427-22122d50c0c6",
    "metadata": {},
    "outputs": [],
@@ -155,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "2da98e29-c2c9-4775-be66-ee60e63a880c",
    "metadata": {},
    "outputs": [
@@ -254,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "55d2dd30-fb18-4048-8e94-41eec7696f33",
    "metadata": {},
    "outputs": [],
@@ -264,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "655fb05f-163c-44d9-839d-ccae04117122",
    "metadata": {},
    "outputs": [
@@ -363,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "44ea5136-29d9-4c6f-ad52-0499e280d6b0",
    "metadata": {},
    "outputs": [],
@@ -377,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "b74f5462-b8ca-41d1-82b0-8d62a36a79e7",
    "metadata": {},
    "outputs": [
@@ -490,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "85539b96-8c02-4006-9a6d-aa92c8245f48",
    "metadata": {},
    "outputs": [
@@ -572,6 +570,7 @@
    "cell_type": "markdown",
    "id": "47d1f8ba-d32c-4330-9954-23523d41488d",
    "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -630,7 +629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "6beb8a84-457a-421b-bc3e-96bd99557bec",
    "metadata": {},
    "outputs": [],
@@ -677,7 +676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "67c924b4-8ace-423d-850e-9e6f49ff94f9",
    "metadata": {},
    "outputs": [],
@@ -708,6 +707,7 @@
    "cell_type": "markdown",
    "id": "b022d547-75f4-4b66-a9b3-fa06b2496b8c",
    "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -716,7 +716,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 241,
+   "execution_count": 13,
    "id": "c5226a1c-6040-4349-99c7-30bab312e460",
    "metadata": {},
    "outputs": [
@@ -801,7 +801,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 242,
+   "execution_count": 14,
    "id": "2bd65cb7-cf85-4090-90fc-a2bfa48ee471",
    "metadata": {},
    "outputs": [],
@@ -832,6 +832,7 @@
    "cell_type": "markdown",
    "id": "be30887f-867b-4da7-b9d2-766b68dc59f5",
    "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -850,7 +851,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 243,
+   "execution_count": 15,
    "id": "3b5d551e-c657-46b2-800a-85c35fe1a57a",
    "metadata": {},
    "outputs": [],
@@ -860,7 +861,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 244,
+   "execution_count": 16,
    "id": "6aee6656-285b-4f96-a8c2-8788f1aa20d5",
    "metadata": {},
    "outputs": [
@@ -938,7 +939,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 245,
+   "execution_count": 17,
    "id": "88986ac5-6e59-4241-a53d-10026b7ab540",
    "metadata": {},
    "outputs": [],
@@ -948,7 +949,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 246,
+   "execution_count": 18,
    "id": "adfa1c10-5767-42ff-9d28-cb3f5d72fc08",
    "metadata": {},
    "outputs": [
@@ -983,7 +984,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 247,
+   "execution_count": 19,
    "id": "e5a5c540-8bf2-4e93-a545-e2b42fbba330",
    "metadata": {},
    "outputs": [
@@ -1061,7 +1062,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 248,
+   "execution_count": 20,
    "id": "4608e4e1-d25d-44c0-94f6-16f54ea88b36",
    "metadata": {},
    "outputs": [],
@@ -1071,7 +1072,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 249,
+   "execution_count": 21,
    "id": "c652c50f-6270-4f4c-b002-1e8583dec953",
    "metadata": {},
    "outputs": [
@@ -1106,7 +1107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 250,
+   "execution_count": 22,
    "id": "fbc3d4ef-29c1-4eab-970d-4bf62eb18f21",
    "metadata": {},
    "outputs": [
@@ -1184,7 +1185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 251,
+   "execution_count": 23,
    "id": "17d30cf3-af7b-4b8b-80b7-7491ab35b760",
    "metadata": {},
    "outputs": [],
@@ -1194,7 +1195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 252,
+   "execution_count": 24,
    "id": "73fbb1ed-8250-4305-ae4e-1486b738cb51",
    "metadata": {},
    "outputs": [
@@ -1231,6 +1232,7 @@
    "cell_type": "markdown",
    "id": "41832a32-1b0c-4a4f-af01-145d8ad5071b",
    "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -1264,7 +1266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 253,
+   "execution_count": 25,
    "id": "51f1ed89-6ed2-4ae6-92e2-5c1d83f3188a",
    "metadata": {},
    "outputs": [],
@@ -1282,7 +1284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 254,
+   "execution_count": 26,
    "id": "4c7a2f46-4bf5-4d97-a370-19e1ff2cf040",
    "metadata": {},
    "outputs": [
@@ -1363,7 +1365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 255,
+   "execution_count": 27,
    "id": "c309102a-cc29-428e-8d09-23c2deb53c24",
    "metadata": {},
    "outputs": [],
@@ -1373,7 +1375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 256,
+   "execution_count": 28,
    "id": "52ecd147-354a-4fa1-a354-c6aa62760fe3",
    "metadata": {},
    "outputs": [
@@ -1430,7 +1432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 257,
+   "execution_count": 29,
    "id": "9b3e6825-2996-4717-88e0-0ebf90bcef6e",
    "metadata": {},
    "outputs": [
@@ -1511,7 +1513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 258,
+   "execution_count": 30,
    "id": "e9fa39c8-007f-452f-bd28-5c3a7b7f6467",
    "metadata": {},
    "outputs": [],
@@ -1521,7 +1523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 259,
+   "execution_count": 31,
    "id": "ff150409-b4c3-4140-8c37-8e7663fe2f5d",
    "metadata": {
     "tags": []
@@ -1580,7 +1582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 260,
+   "execution_count": 32,
    "id": "5e73bdb9-7023-4efa-8d15-34cfab86bdc5",
    "metadata": {},
    "outputs": [
@@ -1661,7 +1663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 261,
+   "execution_count": 33,
    "id": "81b340ed-efa6-4968-9101-d0e970f2f488",
    "metadata": {},
    "outputs": [],
@@ -1671,7 +1673,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 262,
+   "execution_count": 34,
    "id": "d92705f0-275c-4c5b-abda-0f279417075a",
    "metadata": {
     "tags": []
@@ -1740,7 +1742,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 263,
+   "execution_count": 35,
    "id": "498cfef0-a1d5-4cd5-9c72-20e740e43f8d",
    "metadata": {},
    "outputs": [],
@@ -1750,7 +1752,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 264,
+   "execution_count": 36,
    "id": "9a408609-4b9a-42a5-bd0b-970f1532b7d5",
    "metadata": {},
    "outputs": [],
@@ -1760,7 +1762,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 265,
+   "execution_count": 37,
    "id": "df9ae160-b78f-45a0-a7e8-f93ed63ce135",
    "metadata": {},
    "outputs": [],
@@ -1770,7 +1772,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 266,
+   "execution_count": 38,
    "id": "6f58c05a-2fdd-49e1-9a93-05282bebb2cc",
    "metadata": {},
    "outputs": [],
@@ -1780,7 +1782,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 267,
+   "execution_count": 39,
    "id": "9f06c163-791a-4980-ba29-b7ed2f7b0eee",
    "metadata": {},
    "outputs": [],
@@ -1792,7 +1794,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 268,
+   "execution_count": 40,
    "id": "05b710ac-b118-4459-b8a1-abfe64176d3b",
    "metadata": {},
    "outputs": [],
@@ -1802,7 +1804,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 269,
+   "execution_count": 41,
    "id": "22b5f464-df64-4659-bebe-1d1fabcd3976",
    "metadata": {},
    "outputs": [
@@ -1856,7 +1858,7 @@
    "mimetype": "text/x-r-source",
    "name": "R",
    "pygments_lexer": "r",
-   "version": "4.1.1"
+   "version": "4.0.5"
   }
  },
  "nbformat": 4,
