Calderon et al. Raw Data information

--- a/04_Expression/scripts/eigengene_single_variant_association_exploration.ipynb
+++ b/04_Expression/scripts/eigengene_single_variant_association_exploration.ipynb
@@ -20,33 +20,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "5aa6f310-53bc-4e4a-9f26-62e0716b2c2e",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "'getOption(\"repos\")' replaces Bioconductor standard repositories, see\n",
-      "'?repositories' for details\n",
-      "\n",
-      "replacement repositories:\n",
-      "    CRAN: https://cran.r-project.org\n",
-      "\n",
-      "\n",
-      "Bioconductor version 3.12 (BiocManager 1.30.16), R 4.0.5 (2021-03-31)\n",
-      "\n",
-      "Installing package(s) 'BiocVersion', 'ComplexHeatmap'\n",
-      "\n",
-      "also installing the dependencies ‘shape’, ‘circlize’, ‘GetoptLong’, ‘clue’, ‘GlobalOptions’, ‘Cairo’\n",
-      "\n",
-      "\n",
-      "Old packages: 'patchwork', 'WGCNA'\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "if (!requireNamespace(\"BiocManager\", quietly = TRUE)) {\n",
     "    install.packages(\"BiocManager\")\n",
@@ -59,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "b57f682b-54fb-470e-b766-b9f21ae2d9b2",
    "metadata": {},
    "outputs": [
@@ -67,14 +44,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "── \u001b[1mAttaching packages\u001b[22m ─────────────────────────────────────────────────────────────────────────────────────────── tidyverse 1.3.1 ──\n",
+      "── \u001b[1mAttaching packages\u001b[22m ──────────────────────────────────────────────────────────────────────────────────────────────────────────── tidyverse 1.3.1 ──\n",
       "\n",
       "\u001b[32m✔\u001b[39m \u001b[34mggplot2\u001b[39m 3.3.5     \u001b[32m✔\u001b[39m \u001b[34mpurrr  \u001b[39m 0.3.4\n",
       "\u001b[32m✔\u001b[39m \u001b[34mtibble \u001b[39m 3.1.6     \u001b[32m✔\u001b[39m \u001b[34mdplyr  \u001b[39m 1.0.7\n",
       "\u001b[32m✔\u001b[39m \u001b[34mtidyr  \u001b[39m 1.1.4     \u001b[32m✔\u001b[39m \u001b[34mstringr\u001b[39m 1.4.0\n",
       "\u001b[32m✔\u001b[39m \u001b[34mreadr  \u001b[39m 2.1.1     \u001b[32m✔\u001b[39m \u001b[34mforcats\u001b[39m 0.5.1\n",
       "\n",
-      "── \u001b[1mConflicts\u001b[22m ────────────────────────────────────────────────────────────────────────────────────────────── tidyverse_conflicts() ──\n",
+      "── \u001b[1mConflicts\u001b[22m ─────────────────────────────────────────────────────────────────────────────────────────────────────────────── tidyverse_conflicts() ──\n",
       "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mfilter()\u001b[39m masks \u001b[34mstats\u001b[39m::filter()\n",
       "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mlag()\u001b[39m    masks \u001b[34mstats\u001b[39m::lag()\n",
       "\n",
@@ -118,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "35ab229e-25c4-404d-8390-01f32b34e94f",
    "metadata": {},
    "outputs": [],
@@ -135,7 +112,99 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
+   "id": "0b1b5e57-4df2-42c1-b77d-10f84cff585d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table class=\"dataframe\">\n",
+       "<caption>A data.frame: 6 × 43</caption>\n",
+       "<thead>\n",
+       "\t<tr><th></th><th scope=col>Neutrophils</th><th scope=col>Lymphocytes</th><th scope=col>Monocytes</th><th scope=col>PC1</th><th scope=col>PC2</th><th scope=col>PC3</th><th scope=col>PC4</th><th scope=col>PC5</th><th scope=col>PC6</th><th scope=col>PC7</th><th scope=col>⋯</th><th scope=col>PEER_21</th><th scope=col>PEER_22</th><th scope=col>PEER_23</th><th scope=col>PEER_24</th><th scope=col>PEER_25</th><th scope=col>PEER_26</th><th scope=col>PEER_27</th><th scope=col>PEER_28</th><th scope=col>PEER_29</th><th scope=col>PEER_30</th></tr>\n",
+       "\t<tr><th></th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>⋯</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th></tr>\n",
+       "</thead>\n",
+       "<tbody>\n",
+       "\t<tr><th scope=row>1</th><td>-0.6570452</td><td> 0.5046425</td><td> 0.75330287</td><td>-0.00603059</td><td>-0.00915021</td><td> 0.0149273</td><td>-0.00742532</td><td>-0.02454830</td><td> 0.02166040</td><td> 0.02442800</td><td>⋯</td><td> 0.09602877</td><td>-0.035489850</td><td> 0.06698118</td><td>-0.037203029</td><td>-0.01210347</td><td> 0.061659694</td><td>-0.01387458</td><td> 0.08567432</td><td> 0.03195278</td><td>-0.003045917</td></tr>\n",
+       "\t<tr><th scope=row>2</th><td>-0.5344447</td><td> 0.6742494</td><td> 0.30647597</td><td>-0.00414468</td><td>-0.00487842</td><td> 0.0142126</td><td>-0.00624543</td><td>-0.00977121</td><td>-0.03286350</td><td> 0.01883380</td><td>⋯</td><td> 0.07761726</td><td> 0.029845083</td><td> 0.01341575</td><td>-0.026477369</td><td> 0.12433421</td><td> 0.003024142</td><td> 0.01848050</td><td>-0.02250616</td><td>-0.01512392</td><td>-0.032571316</td></tr>\n",
+       "\t<tr><th scope=row>3</th><td> 0.3680959</td><td>-0.3000608</td><td>-0.21610853</td><td>-0.00427962</td><td>-0.00344996</td><td> 0.0117995</td><td> 0.00431659</td><td> 0.01247920</td><td> 0.02351020</td><td> 0.02985890</td><td>⋯</td><td>-0.09740166</td><td>-0.061829060</td><td>-0.07338120</td><td>-0.030090392</td><td> 0.03239061</td><td> 0.001583416</td><td>-0.21499629</td><td>-0.01757544</td><td> 0.02671108</td><td> 0.126797318</td></tr>\n",
+       "\t<tr><th scope=row>4</th><td> 0.2681639</td><td>-0.2523192</td><td>-0.06284107</td><td>-0.01178980</td><td> 0.01282750</td><td>-0.0116017</td><td> 0.00712712</td><td>-0.02747930</td><td>-0.01333480</td><td> 0.04838380</td><td>⋯</td><td>-0.04257343</td><td> 0.006401811</td><td> 0.07727438</td><td>-0.032197606</td><td>-0.03260376</td><td>-0.021537485</td><td> 0.05931247</td><td>-0.05872972</td><td>-0.16533837</td><td> 0.115650415</td></tr>\n",
+       "\t<tr><th scope=row>5</th><td> 0.3322661</td><td> 0.0000000</td><td>-0.53267866</td><td>-0.00664638</td><td>-0.00313558</td><td> 0.0136165</td><td> 0.00488043</td><td> 0.01556400</td><td> 0.00400716</td><td> 0.00181563</td><td>⋯</td><td> 0.02098465</td><td>-0.041418314</td><td>-0.04241706</td><td>-0.007278872</td><td> 0.06200137</td><td>-0.085809112</td><td>-0.07210498</td><td>-0.11386959</td><td>-0.13815548</td><td>-0.049881458</td></tr>\n",
+       "\t<tr><th scope=row>6</th><td> 0.8637637</td><td>-0.6065508</td><td>-0.69360244</td><td>-0.00862201</td><td>-0.00706158</td><td> 0.0175585</td><td> 0.00584783</td><td>-0.01940800</td><td>-0.06221080</td><td>-0.02836020</td><td>⋯</td><td>-0.01613223</td><td> 0.058187358</td><td> 0.03632351</td><td>-0.120667055</td><td>-0.06823803</td><td>-0.002022076</td><td>-0.05916480</td><td>-0.15658262</td><td>-0.14359722</td><td> 0.012362719</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "A data.frame: 6 × 43\n",
+       "\\begin{tabular}{r|lllllllllllllllllllll}\n",
+       "  & Neutrophils & Lymphocytes & Monocytes & PC1 & PC2 & PC3 & PC4 & PC5 & PC6 & PC7 & ⋯ & PEER\\_21 & PEER\\_22 & PEER\\_23 & PEER\\_24 & PEER\\_25 & PEER\\_26 & PEER\\_27 & PEER\\_28 & PEER\\_29 & PEER\\_30\\\\\n",
+       "  & <dbl> & <dbl> & <dbl> & <dbl> & <dbl> & <dbl> & <dbl> & <dbl> & <dbl> & <dbl> & ⋯ & <dbl> & <dbl> & <dbl> & <dbl> & <dbl> & <dbl> & <dbl> & <dbl> & <dbl> & <dbl>\\\\\n",
+       "\\hline\n",
+       "\t1 & -0.6570452 &  0.5046425 &  0.75330287 & -0.00603059 & -0.00915021 &  0.0149273 & -0.00742532 & -0.02454830 &  0.02166040 &  0.02442800 & ⋯ &  0.09602877 & -0.035489850 &  0.06698118 & -0.037203029 & -0.01210347 &  0.061659694 & -0.01387458 &  0.08567432 &  0.03195278 & -0.003045917\\\\\n",
+       "\t2 & -0.5344447 &  0.6742494 &  0.30647597 & -0.00414468 & -0.00487842 &  0.0142126 & -0.00624543 & -0.00977121 & -0.03286350 &  0.01883380 & ⋯ &  0.07761726 &  0.029845083 &  0.01341575 & -0.026477369 &  0.12433421 &  0.003024142 &  0.01848050 & -0.02250616 & -0.01512392 & -0.032571316\\\\\n",
+       "\t3 &  0.3680959 & -0.3000608 & -0.21610853 & -0.00427962 & -0.00344996 &  0.0117995 &  0.00431659 &  0.01247920 &  0.02351020 &  0.02985890 & ⋯ & -0.09740166 & -0.061829060 & -0.07338120 & -0.030090392 &  0.03239061 &  0.001583416 & -0.21499629 & -0.01757544 &  0.02671108 &  0.126797318\\\\\n",
+       "\t4 &  0.2681639 & -0.2523192 & -0.06284107 & -0.01178980 &  0.01282750 & -0.0116017 &  0.00712712 & -0.02747930 & -0.01333480 &  0.04838380 & ⋯ & -0.04257343 &  0.006401811 &  0.07727438 & -0.032197606 & -0.03260376 & -0.021537485 &  0.05931247 & -0.05872972 & -0.16533837 &  0.115650415\\\\\n",
+       "\t5 &  0.3322661 &  0.0000000 & -0.53267866 & -0.00664638 & -0.00313558 &  0.0136165 &  0.00488043 &  0.01556400 &  0.00400716 &  0.00181563 & ⋯ &  0.02098465 & -0.041418314 & -0.04241706 & -0.007278872 &  0.06200137 & -0.085809112 & -0.07210498 & -0.11386959 & -0.13815548 & -0.049881458\\\\\n",
+       "\t6 &  0.8637637 & -0.6065508 & -0.69360244 & -0.00862201 & -0.00706158 &  0.0175585 &  0.00584783 & -0.01940800 & -0.06221080 & -0.02836020 & ⋯ & -0.01613223 &  0.058187358 &  0.03632351 & -0.120667055 & -0.06823803 & -0.002022076 & -0.05916480 & -0.15658262 & -0.14359722 &  0.012362719\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "A data.frame: 6 × 43\n",
+       "\n",
+       "| <!--/--> | Neutrophils &lt;dbl&gt; | Lymphocytes &lt;dbl&gt; | Monocytes &lt;dbl&gt; | PC1 &lt;dbl&gt; | PC2 &lt;dbl&gt; | PC3 &lt;dbl&gt; | PC4 &lt;dbl&gt; | PC5 &lt;dbl&gt; | PC6 &lt;dbl&gt; | PC7 &lt;dbl&gt; | ⋯ ⋯ | PEER_21 &lt;dbl&gt; | PEER_22 &lt;dbl&gt; | PEER_23 &lt;dbl&gt; | PEER_24 &lt;dbl&gt; | PEER_25 &lt;dbl&gt; | PEER_26 &lt;dbl&gt; | PEER_27 &lt;dbl&gt; | PEER_28 &lt;dbl&gt; | PEER_29 &lt;dbl&gt; | PEER_30 &lt;dbl&gt; |\n",
+       "|---|---|---|---|---|---|---|---|---|---|---|---|---|---|---|---|---|---|---|---|---|---|\n",
+       "| 1 | -0.6570452 |  0.5046425 |  0.75330287 | -0.00603059 | -0.00915021 |  0.0149273 | -0.00742532 | -0.02454830 |  0.02166040 |  0.02442800 | ⋯ |  0.09602877 | -0.035489850 |  0.06698118 | -0.037203029 | -0.01210347 |  0.061659694 | -0.01387458 |  0.08567432 |  0.03195278 | -0.003045917 |\n",
+       "| 2 | -0.5344447 |  0.6742494 |  0.30647597 | -0.00414468 | -0.00487842 |  0.0142126 | -0.00624543 | -0.00977121 | -0.03286350 |  0.01883380 | ⋯ |  0.07761726 |  0.029845083 |  0.01341575 | -0.026477369 |  0.12433421 |  0.003024142 |  0.01848050 | -0.02250616 | -0.01512392 | -0.032571316 |\n",
+       "| 3 |  0.3680959 | -0.3000608 | -0.21610853 | -0.00427962 | -0.00344996 |  0.0117995 |  0.00431659 |  0.01247920 |  0.02351020 |  0.02985890 | ⋯ | -0.09740166 | -0.061829060 | -0.07338120 | -0.030090392 |  0.03239061 |  0.001583416 | -0.21499629 | -0.01757544 |  0.02671108 |  0.126797318 |\n",
+       "| 4 |  0.2681639 | -0.2523192 | -0.06284107 | -0.01178980 |  0.01282750 | -0.0116017 |  0.00712712 | -0.02747930 | -0.01333480 |  0.04838380 | ⋯ | -0.04257343 |  0.006401811 |  0.07727438 | -0.032197606 | -0.03260376 | -0.021537485 |  0.05931247 | -0.05872972 | -0.16533837 |  0.115650415 |\n",
+       "| 5 |  0.3322661 |  0.0000000 | -0.53267866 | -0.00664638 | -0.00313558 |  0.0136165 |  0.00488043 |  0.01556400 |  0.00400716 |  0.00181563 | ⋯ |  0.02098465 | -0.041418314 | -0.04241706 | -0.007278872 |  0.06200137 | -0.085809112 | -0.07210498 | -0.11386959 | -0.13815548 | -0.049881458 |\n",
+       "| 6 |  0.8637637 | -0.6065508 | -0.69360244 | -0.00862201 | -0.00706158 |  0.0175585 |  0.00584783 | -0.01940800 | -0.06221080 | -0.02836020 | ⋯ | -0.01613223 |  0.058187358 |  0.03632351 | -0.120667055 | -0.06823803 | -0.002022076 | -0.05916480 | -0.15658262 | -0.14359722 |  0.012362719 |\n",
+       "\n"
+      ],
+      "text/plain": [
+       "  Neutrophils Lymphocytes Monocytes   PC1         PC2         PC3       \n",
+       "1 -0.6570452   0.5046425   0.75330287 -0.00603059 -0.00915021  0.0149273\n",
+       "2 -0.5344447   0.6742494   0.30647597 -0.00414468 -0.00487842  0.0142126\n",
+       "3  0.3680959  -0.3000608  -0.21610853 -0.00427962 -0.00344996  0.0117995\n",
+       "4  0.2681639  -0.2523192  -0.06284107 -0.01178980  0.01282750 -0.0116017\n",
+       "5  0.3322661   0.0000000  -0.53267866 -0.00664638 -0.00313558  0.0136165\n",
+       "6  0.8637637  -0.6065508  -0.69360244 -0.00862201 -0.00706158  0.0175585\n",
+       "  PC4         PC5         PC6         PC7         ⋯ PEER_21     PEER_22     \n",
+       "1 -0.00742532 -0.02454830  0.02166040  0.02442800 ⋯  0.09602877 -0.035489850\n",
+       "2 -0.00624543 -0.00977121 -0.03286350  0.01883380 ⋯  0.07761726  0.029845083\n",
+       "3  0.00431659  0.01247920  0.02351020  0.02985890 ⋯ -0.09740166 -0.061829060\n",
+       "4  0.00712712 -0.02747930 -0.01333480  0.04838380 ⋯ -0.04257343  0.006401811\n",
+       "5  0.00488043  0.01556400  0.00400716  0.00181563 ⋯  0.02098465 -0.041418314\n",
+       "6  0.00584783 -0.01940800 -0.06221080 -0.02836020 ⋯ -0.01613223  0.058187358\n",
+       "  PEER_23     PEER_24      PEER_25     PEER_26      PEER_27     PEER_28    \n",
+       "1  0.06698118 -0.037203029 -0.01210347  0.061659694 -0.01387458  0.08567432\n",
+       "2  0.01341575 -0.026477369  0.12433421  0.003024142  0.01848050 -0.02250616\n",
+       "3 -0.07338120 -0.030090392  0.03239061  0.001583416 -0.21499629 -0.01757544\n",
+       "4  0.07727438 -0.032197606 -0.03260376 -0.021537485  0.05931247 -0.05872972\n",
+       "5 -0.04241706 -0.007278872  0.06200137 -0.085809112 -0.07210498 -0.11386959\n",
+       "6  0.03632351 -0.120667055 -0.06823803 -0.002022076 -0.05916480 -0.15658262\n",
+       "  PEER_29     PEER_30     \n",
+       "1  0.03195278 -0.003045917\n",
+       "2 -0.01512392 -0.032571316\n",
+       "3  0.02671108  0.126797318\n",
+       "4 -0.16533837  0.115650415\n",
+       "5 -0.13815548 -0.049881458\n",
+       "6 -0.14359722  0.012362719"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "head(read.table(\"~/gains_team282/eqtl/data/covs_and_peer_factors.txt\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "id": "778d7314-6a62-4e86-a35a-68daaabfe7d5",
    "metadata": {},
    "outputs": [
@@ -163,7 +232,7 @@
     }
    ],
    "source": [
-    "held.out <- c(\"neutrophils\", \"lymphocytes\", \"monocytes\", paste0(\"genopc\", 1:7), \"diagnosis\", \"SRSq\", \"sex\")\n",
+    "held.out <- c(\"Neutrophils\", \"Lymphocytes\", \"Monocytes\", paste0(\"PC\", 1:7), \"Diagnosis\", \"SRSq\", \"sex\")\n",
     "peer <- paste0(\"peer\", 1:30)\n",
     "\n",
     "covs <- read.table(\"~/gains_team282/eqtl/data/covs_and_peer_factors.txt\") %>%\n",
