--- a/03_Functional_Interpretation/scripts/peaks_jaccard_similarity.ipynb
+++ b/03_Functional_Interpretation/scripts/peaks_jaccard_similarity.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "de7a0e59-e32b-493e-a511-1e029820fec1",
    "metadata": {},
    "outputs": [
@@ -29,60 +29,29 @@
      "output_type": "stream",
      "text": [
       "Loading required package: pheatmap\n",
-      "\n"
+      "\n",
+      "Warning message in library(package, lib.loc = lib.loc, character.only = TRUE, logical.return = TRUE, :\n",
+      "“there is no package called ‘pheatmap’”\n"
      ]
     }
    ],
    "source": [
-    "rm(list=ls())\n",
-    "\n",
     "if (!require(\"pheatmap\")) {\n",
     "    install.packages(\"pheatmap\")\n",
+    "}\n",
+    "\n",
+    "if (!requireNamespace(\"patchwork\")) {\n",
+    "    install.packages(\"devtools\")\n",
+    "    devtools::install_github(\"thomasp85/patchwork\")\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "2818c058-69df-4434-833a-481138f33746",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "── \u001b[1mAttaching packages\u001b[22m ─────────────────────────────────────────────────────────────────────────────────────── tidyverse 1.3.1 ──\n",
-      "\n",
-      "\u001b[32m✔\u001b[39m \u001b[34mggplot2\u001b[39m 3.3.5     \u001b[32m✔\u001b[39m \u001b[34mpurrr  \u001b[39m 0.3.4\n",
-      "\u001b[32m✔\u001b[39m \u001b[34mtibble \u001b[39m 3.1.6     \u001b[32m✔\u001b[39m \u001b[34mdplyr  \u001b[39m 1.0.7\n",
-      "\u001b[32m✔\u001b[39m \u001b[34mtidyr  \u001b[39m 1.1.4     \u001b[32m✔\u001b[39m \u001b[34mstringr\u001b[39m 1.4.0\n",
-      "\u001b[32m✔\u001b[39m \u001b[34mreadr  \u001b[39m 2.1.0     \u001b[32m✔\u001b[39m \u001b[34mforcats\u001b[39m 0.5.1\n",
-      "\n",
-      "── \u001b[1mConflicts\u001b[22m ────────────────────────────────────────────────────────────────────────────────────────── tidyverse_conflicts() ──\n",
-      "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mfilter()\u001b[39m masks \u001b[34mstats\u001b[39m::filter()\n",
-      "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mlag()\u001b[39m    masks \u001b[34mstats\u001b[39m::lag()\n",
-      "\n",
-      "\n",
-      "Attaching package: ‘MASS’\n",
-      "\n",
-      "\n",
-      "The following object is masked from ‘package:dplyr’:\n",
-      "\n",
-      "    select\n",
-      "\n",
-      "\n",
-      "\n",
-      "Attaching package: ‘patchwork’\n",
-      "\n",
-      "\n",
-      "The following object is masked from ‘package:MASS’:\n",
-      "\n",
-      "    area\n",
-      "\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "library(tidyverse)\n",
     "library(MASS)\n",
