Updated motif analysis to include control sequences

--- a/04_Expression/scripts/eigengene_single_variant_association_exploration.ipynb
+++ b/04_Expression/scripts/eigengene_single_variant_association_exploration.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 2,
    "id": "b57f682b-54fb-470e-b766-b9f21ae2d9b2",
    "metadata": {},
    "outputs": [
@@ -44,6 +44,34 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "── \u001b[1mAttaching packages\u001b[22m ──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────── tidyverse 1.3.1 ──\n",
+      "\n",
+      "\u001b[32m✔\u001b[39m \u001b[34mggplot2\u001b[39m 3.3.5     \u001b[32m✔\u001b[39m \u001b[34mpurrr  \u001b[39m 0.3.4\n",
+      "\u001b[32m✔\u001b[39m \u001b[34mtibble \u001b[39m 3.1.6     \u001b[32m✔\u001b[39m \u001b[34mdplyr  \u001b[39m 1.0.7\n",
+      "\u001b[32m✔\u001b[39m \u001b[34mtidyr  \u001b[39m 1.1.4     \u001b[32m✔\u001b[39m \u001b[34mstringr\u001b[39m 1.4.0\n",
+      "\u001b[32m✔\u001b[39m \u001b[34mreadr  \u001b[39m 2.1.1     \u001b[32m✔\u001b[39m \u001b[34mforcats\u001b[39m 0.5.1\n",
+      "\n",
+      "── \u001b[1mConflicts\u001b[22m ─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────── tidyverse_conflicts() ──\n",
+      "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mfilter()\u001b[39m masks \u001b[34mstats\u001b[39m::filter()\n",
+      "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mlag()\u001b[39m    masks \u001b[34mstats\u001b[39m::lag()\n",
+      "\n",
+      "Loading required package: grid\n",
+      "\n",
+      "========================================\n",
+      "ComplexHeatmap version 2.6.2\n",
+      "Bioconductor page: http://bioconductor.org/packages/ComplexHeatmap/\n",
+      "Github page: https://github.com/jokergoo/ComplexHeatmap\n",
+      "Documentation: http://jokergoo.github.io/ComplexHeatmap-reference\n",
+      "\n",
+      "If you use it in published research, please cite:\n",
+      "Gu, Z. Complex heatmaps reveal patterns and correlations in multidimensional \n",
+      "  genomic data. Bioinformatics 2016.\n",
+      "\n",
+      "This message can be suppressed by:\n",
+      "  suppressPackageStartupMessages(library(ComplexHeatmap))\n",
+      "========================================\n",
+      "\n",
+      "\n",
       "\n",
       "Attaching package: ‘data.table’\n",
       "\n",
@@ -112,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 5,
    "id": "0b1b5e57-4df2-42c1-b77d-10f84cff585d",
    "metadata": {},
    "outputs": [],
@@ -128,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 6,
    "id": "778d7314-6a62-4e86-a35a-68daaabfe7d5",
    "metadata": {},
    "outputs": [
@@ -234,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 7,
    "id": "31b17104-f1be-4f75-a7c2-791888eb337f",
    "metadata": {},
    "outputs": [
@@ -351,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 8,
    "id": "6df18220-afd6-43ac-b99f-f15563ff1cca",
    "metadata": {},
    "outputs": [],
@@ -362,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 9,
    "id": "970676d3-5339-4770-89ea-d97d779932b4",
    "metadata": {},
    "outputs": [
@@ -438,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 10,
    "id": "f62606bd-242d-4ea2-acee-e7ca3e032a61",
    "metadata": {},
    "outputs": [
@@ -476,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 11,
    "id": "8f8fd18f-36ed-4578-9619-2fc2ee381905",
    "metadata": {},
    "outputs": [],
@@ -504,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 12,
    "id": "13413b35-1092-4b7a-97ef-7a734fdd0dd5",
    "metadata": {},
    "outputs": [],
@@ -520,7 +548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 13,
    "id": "93a8597a-1a50-423b-a6e9-fc179ac88d39",
    "metadata": {},
    "outputs": [
@@ -560,7 +588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 14,
    "id": "61dae4de-5a7a-4686-a22c-c981fee7c1b0",
    "metadata": {},
    "outputs": [],
@@ -581,7 +609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 15,
    "id": "0b100493-d60e-4f89-b9cf-c966916b8fae",
    "metadata": {},
    "outputs": [],
@@ -631,7 +659,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 16,
    "id": "2c9a6515-9ca4-4974-abb0-c5fabf338edc",
    "metadata": {},
    "outputs": [
@@ -667,7 +695,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 17,
    "id": "e8ae2e1e-aee5-4217-bd0a-538807c882b8",
    "metadata": {},
    "outputs": [
@@ -971,7 +999,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 18,
    "id": "9ca7f99f-8647-4923-8eb8-1b8969407e4c",
    "metadata": {},
    "outputs": [],
@@ -993,7 +1021,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 19,
    "id": "0ea89bc0-7ba5-41be-8f25-cf2961c20975",
    "metadata": {},
    "outputs": [],
@@ -1043,7 +1071,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 20,
    "id": "06c4ac4b-9bc5-4e87-8757-3cc03b02ceb1",
    "metadata": {},
    "outputs": [
@@ -1079,7 +1107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 21,
    "id": "04558d2b-a7ac-463d-b826-95de207efb7a",
    "metadata": {},
    "outputs": [
@@ -1391,7 +1419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 22,
    "id": "745ebd75-dcb5-48c5-b06c-6fec48f7198c",
    "metadata": {},
    "outputs": [],
@@ -1413,7 +1441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 23,
    "id": "f3ef8ac1-a9a0-4beb-8bcf-c7e446184a51",
    "metadata": {},
    "outputs": [],
